<resources>
    <string name="app_name">NoWakeLock</string>
    <string name="xposeddescription">Just for block wakelock</string>
    <string name="navigation_view_header_title">NoWakeLock</string>
    <string name="active">Module is not active</string>
    <string name="backup">Backup complete</string>
    <string name="restore">Restore complete</string>
    <string name="BackupAndRestore">Backup and restore</string>
    <string name="clipboard">copy to clipboard</string>
    <string name="test">Test</string>
    <string name="android">Android System</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="recordFlag_title">Record data</string>
    <string name="recordFlag_summary">Record device wake-up data</string>
    <string name="Save">Save</string>
    <string name="updateST_summary">Synchronously disable configuration information(second)</string>
    <string name="updateST_title">Sync setting</string>
    <string name="updateDb_title">Data synchronization</string>
    <string name="updateDb_summary">Synchronously wake-up data information(second)</string>
    <string name="other">Other</string>
    <string name="powerFlag_title">Reset count</string>
    <string name="powerFlag_summary">After charged, reset count</string>
    <string name="theme">Theme</string>
    <string name="theme_list">General theme</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="system_theme_name">Follow System</string>
    <string name="channel_name">Background Services</string>
    <string name="channel_description">Just ignore this notification or hiding it</string>
    <string name="channel_id" translatable="false">nowakelock</string>
    <string name="notofication_title">Background Services</string>
    <string name="notofication_text">NoWakeLock need a service to meantain database.Just ignore this notification or hiding it</string>
    <string name="Count">Count</string>
    <string name="BlockCount">BlockCount</string>
    <string name="CountTime">CountTime</string>
    <string name="BlockCountTime">BlockCountTime</string>
    <string name="search_title">Search</string>
    <string name="menu_filter">filter</string>
    <string name="menu_filter_user">show user app</string>
    <string name="menu_filter_system">show system app</string>
    <string name="menu_filter_modified">show modified app</string>
    <string name="menu_filter_all">show all app</string>
    <string name="menu_filter_count">order by count</string>
    <string name="menu_filter_name">order by name</string>
    <string name="menu_filter_countime">order by count time</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="WakeLock">WakeLock</string>
    <string name="Alarm">Alarm</string>
    <string name="Service">Service</string>
    <string name="Apps">Apps</string>
    <string name="help">Help</string>
    <string name="help_instructions">        click the application icon or name to enter wakelock settings,disable wakelock.
        <![CDATA[<br><br>]]> Serious warning, don\'t restrict system application, it will cause unpredictable consequences.
        <![CDATA[<br><br>]]>for other information <![CDATA[<a href="https://github.com/Jasper-1024/NoWakeLock/blob/dev/README.md"> Application Introduction </a>]]>;
           <![CDATA[<a href="https://github.com/Jasper-1024/NoWakeLock/blob/dev/README/FAQ.md">FAQ</a>]]>;
    </string>
    <string name="help_contact">Contact:\n
            If you have any questions or encounter bugs during use, you can email me or initiate a new issue.\n
        \n
        Issue : https://github.com/Jasper-1024/NoWakeLock/issues \n
        \n
        JasperHale: ljy087621@gmail.com</string>
    <string name="ATIText">Allow interval</string>
    <string name="FlagText">Allow</string>
    <string name="wakelockFlagText">Allow wakelock</string>
    <string name="ATIUnit">second</string>
    <string name="Re_Alarm">Alarm Block Regular expression</string>
    <string name="Re_Wakelock">Wakelock Block Regular expression</string>
    <string name="name">Name</string>
    <string name="application">Application</string>
    <string name="statistics">Statistics</string>
    <string name="backup_title">Create new backup file</string>
    <string name="backup_summary">Backup settings of installed app into file</string>
    <string name="restore_title">Restore from backup file</string>
    <string name="restore_summary">Restoring from a backup file will overwrite the current settings</string>
    <string name="action_allow_all">Allow all</string>
    <string name="action_block_all">Block all</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_inverse">"Select inverse"</string>
    <string name="action_set_ATI">"Set allow time interval"</string>
    <string name="database">DataBase</string>
    <string name="clear_summary">When reset count,clear inactive records.</string>
    <string name="clear_title">Clear inactive records</string>
    <string name="re_hint">One rule per line, new rule input enter</string>
    <string name="user_ower">Primary user</string>
    <string name="user_work">Work profile</string>
    <string name="user_name">User</string>
    <string name="user">User</string>
    <string name="experimental">Experimental function</string>
    <string name="Debug">Debug mode</string>
    <string name="Debug_summary">Enable this when you encounter a wakelock/alarm/service that is not logged, export the full log in Xposed and you can send it to me in any channel to troubleshoot the problem."</string>
    <string-array name="scopes" translatable="false">
        <item>android</item>
        <item>com.android.providers.settings</item>
        <item>com.js.nowakelock</item>
    </string-array>
</resources>
