<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="theme"
        android:icon="@drawable/ic_theme_24dp"
        android:title="@string/theme">

        <ListPreference
            android:defaultValue="light"
            android:entries="@array/theme_list_titles"
            android:entryValues="@array/theme_list_values"
            android:key="theme_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/theme_list"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="sync"
        android:icon="@drawable/ic_sync_24dp"
        android:title="@string/sync">

        <SwitchPreferenceCompat
            app:key="recordFlag"
            app:defaultValue="true"
            app:summary="@string/recordFlag_summary"
            app:title="@string/recordFlag_title" />

        <SeekBarPreference
            android:max="300"
            app:defaultValue="120"
            app:dependency="recordFlag"
            app:key="updateDb"
            app:min="60"
            app:showSeekBarValue="true"
            app:summary="@string/updateDb_summary"
            app:title="@string/updateDb_title" />

        <SeekBarPreference
            android:max="300"
            app:defaultValue="60"
            app:key="updateST"
            app:min="60"
            app:showSeekBarValue="true"
            app:summary="@string/updateST_summary"
            app:title="@string/updateST_title" />


    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_other_24dp"
        android:key="other"
        android:title="@string/other">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="powerFlag"
            app:summary="@string/powerFlag_summary"
            app:title="@string/powerFlag_title" />

    </PreferenceCategory>

</PreferenceScreen>

