<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_allow_all"
        android:icon="@drawable/ic_action_allow"
        android:title="@string/action_allow_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_block_all"
        android:icon="@drawable/ic_action_block_24"
        android:title="@string/action_block_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all_24"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_inverse"
        android:icon="@drawable/ic_action_select_inverse"
        android:title="@string/action_select_inverse"
        app:showAsAction="ifRoom" />

</menu>