<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph"
    app:startDestination="@id/appDaFragment">

    <fragment
        android:id="@+id/appDaFragment"
        android:name="com.js.nowakelock.ui.appDa.AppDaFragment"
        android:label="AppDaFragment" />

    <fragment
        android:id="@+id/wakeLockFragment"
        android:name="com.js.nowakelock.ui.fragment.WakeLockFragment"
        android:label="@string/WakeLock"
        tools:layout="@layout/fragment_da" />
    <fragment
        android:id="@+id/alarmFragment"
        android:name="com.js.nowakelock.ui.fragment.AlarmFragment"
        android:label="@string/Alarm"
        tools:layout="@layout/fragment_da" />
    <fragment
        android:id="@+id/serviceFragment"
        android:name="com.js.nowakelock.ui.fragment.ServiceFragment"
        android:label="@string/Service"
        tools:layout="@layout/fragment_da" />


</navigation>