<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.js.nowakelock.ui.databinding.Converter" />

        <variable
            name="vm"
            type="com.js.nowakelock.ui.dafragment.DaViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.infofragment.InfoFragment">

        <TextView
            android:id="@+id/ListName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:onLongClick="@{() -> vm.copy(vm.da.info.name)}"
            android:text="@{vm.da.info.name}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints,SmallSp,UnknownIdInLayout" />

        <TextView
            android:id="@+id/packageName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:onLongClick="@{() -> vm.copy(vm.da.info.packageName)}"
            android:text="@{vm.da.info.packageName}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints,SmallSp" />


        <TextView
            android:id="@+id/Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:showCount="@{vm.da.info.count}"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/blockCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:showCount="@{vm.da.info.blockCount}"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/FlagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/FlagText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Flag"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/Flag"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/Flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checked="@={!vm.da.st.flag}"
            android:onClick="@{()-> vm.setSt(vm.da.st)}"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ATI"
            app:layout_constraintStart_toEndOf="@+id/FlagText"
            app:layout_constraintTop_toTopOf="@+id/ATI"
            tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/ATIText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ATIText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ATI"
            app:layout_constraintStart_toEndOf="@+id/Flag"
            app:layout_constraintTop_toTopOf="@+id/ATI"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ATI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:afterTextChanged="@{() -> vm.setSt(vm.da.st)}"
            android:autofillHints=""
            android:hint="@string/ATIUnit"
            android:inputType="number"
            android:maxEms="5"
            android:minEms="3"
            android:text="@={Converter.longToString(vm.da.st.allowTimeInterval)}"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ATIText"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/application"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ListName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/statistics"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/packageName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Count"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Count"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/Count" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/BlockCount"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/blockCount"
            app:layout_constraintStart_toEndOf="@+id/Count"
            app:layout_constraintTop_toTopOf="@+id/blockCount" />

        <TextView
            android:id="@+id/contTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/Count"
            app:showTime="@{vm.da.info.countTime}" />

        <TextView
            android:id="@+id/blockContTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/Count"
            app:showTime="@{vm.da.info.blockCountTime}" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CountTime"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/contTime"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/contTime" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/BlockCountTime"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/blockContTime"
            app:layout_constraintStart_toEndOf="@+id/contTime"
            app:layout_constraintTop_toTopOf="@+id/blockContTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>