<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.js.nowakelock.ui.databinding.Converter" />

        <variable
            name="vm"
            type="com.js.nowakelock.ui.appDa.AppDaViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.infofragment.InfoFragment">


        <TextView
            android:id="@+id/wakelock_textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Re_Alarm"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/wakelock_button3"
            app:layout_constraintEnd_toStartOf="@+id/wakelock_button3"
            app:layout_constraintStart_toStartOf="@+id/wakelock_editText"
            app:layout_constraintTop_toTopOf="@+id/wakelock_button3"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/wakelock_textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Re_Wakelock"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/wakelock_button"
            app:layout_constraintEnd_toStartOf="@+id/wakelock_button"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/wakelock_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/wakelock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> vm.saveAppSt(vm.appDa.st)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/wakelock_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> vm.saveAppSt(vm.appDa.st)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wakelock_editText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/wakelock_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:hint="@string/re_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@={Converter.setToString(vm.appDa.st.rE_Wakelock)}"
            android:textColorHint="#546E7A"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wakelock_textView2"
            app:layout_constraintTop_toBottomOf="@+id/wakelock_button"
            tools:ignore="LabelFor,MissingConstraints" />

        <EditText
            android:id="@+id/wakelock_editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:hint="@string/re_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@={Converter.setToString(vm.appDa.st.rE_Alarm)}"
            android:textColorHint="#546E7A"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wakelock_textView3"
            app:layout_constraintTop_toBottomOf="@+id/wakelock_button3"
            tools:ignore="LabelFor,MissingConstraints" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>