<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.js.nowakelock.ui.databding.Converter" />

        <variable
            name="item"
            type="com.js.nowakelock.data.db.entity.AppInfo_st" />

        <variable
            name="handler"
            type="com.js.nowakelock.ui.app.setting.AppSettingHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.app.setting.AppSettingFragment">

        <TextView
            android:id="@+id/wakelock_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Re_Wakelock"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/wakelock_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wakelock_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/wakelock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> handler.save(item)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/wakelock_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:text="@={Converter.setToString(item.rE_Wakelock)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wakelock_button"
            tools:ignore="LabelFor,MissingConstraints" />

        <TextView
            android:id="@+id/alarm_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Re_Alarm"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/alarm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/alarm_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> handler.save(item)}"
            android:text="@string/Save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wakelock_editText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/alarm_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:text="@={Converter.setToString(item.rE_Alarm)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_button"
            tools:ignore="LabelFor,MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>